add jdk8 demo